--- a/UEFA/.gitignore
+++ b/UEFA/.gitignore
@@ -6,3 +6,5 @@ UEFA/venv/Lib/site-packages/clang/native/libclang.dll
 
 venv/
 
+UEFA/venv/Lib/site-packages/tensorflow/python/_pywrap_tensorflow_internal.pyd
+UEFA/venv
